# smart-monitoring

./: .gitmodules  CMakeLists.txt  README.md  index.html  vcpkg.json
assets/: index-4fqKmfX6.js  index-DHyMsVCH.css  index-zy1FqyzF.js
cmake/: core_library.cmake  dependencies.cmake  options.cmake  tests.cmake
docs/: 03_Architecture.md  index.md  Диплом.docx
docs/adr/: 0008-onnx-runtime-for-ml-inference.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AlertCard.tsx  AnomaliesChart.tsx  DashboardHeader.tsx  EnergyByRoomChart.tsx  Header.tsx  Navbar.tsx  PowerChart.tsx  RoomCard.tsx  SeverityDistributionChart.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx  TopConsumersChart.tsx  TopRooms.tsx
frontend/src/features/account/: api.ts
frontend/src/features/admin/: api.ts
frontend/src/features/analytics/: api.ts
frontend/src/features/anomalies/: api.ts
frontend/src/features/auth/: api.ts
frontend/src/features/buildings/: api.ts
frontend/src/features/dashboard/: api.ts
frontend/src/features/devices/: api.ts
frontend/src/features/rooms/: api.ts
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  MainLayout.tsx
frontend/src/pages/: Account.tsx  Admin.tsx  Analytics.tsx  Anomalies.tsx  BuildingAnalytics.tsx  BuildingDetails.tsx  Buildings.tsx  DeviceDetails.tsx  Devices.tsx  Home.tsx  LockedFeature.tsx  Login.tsx  Register.tsx  RoomDetails.tsx  Rooms.tsx  Settings.tsx  Subscription.tsx  Upgrade.tsx
frontend/src/pages/admin/: AdminForms.tsx  AdminUsersTable.tsx
frontend/src/pages/home/: HomeAudience.tsx  HomeFeatures.tsx  HomeFooter.tsx  HomeHero.tsx  HomeOverview.tsx  HomeStats.tsx
frontend/src/pages/upgrade/: PlanSections.tsx  UpgradeCta.tsx  UpgradeHero.tsx
frontend/src/services/: api.ts
frontend/src/shared/api/: client.ts  types.ts
frontend/src/styles/: theme.css
frontend/src/types/: anomaly.ts  health.ts  room.ts  settings.ts  stats.ts
include/dorm_energy/: interfaces.hpp
include/dorm_energy/app/: application.hpp  commands.hpp  message_handler.hpp  notifier.hpp  runtime.hpp
include/dorm_energy/application/: application.hpp  application_builder.hpp  imessage_handler.hpp  inotifier.hpp  notifier_service.hpp  runtime.hpp
include/dorm_energy/application/auth/: auth_service.hpp
include/dorm_energy/application/cli/: command_options.hpp  command_type.hpp
include/dorm_energy/application/commands/: daemon_command.hpp  simulate_command.hpp
include/dorm_energy/application/config/: app_config.hpp  onnx_model_config.hpp
include/dorm_energy/core/: alert_severity.hpp  detection_context.hpp  measurement.hpp  room_state.hpp
include/dorm_energy/detection/: anomaly_detector.hpp
include/dorm_energy/domain/auth/: auth_response.hpp  ijwt_service.hpp  ipassword_hasher.hpp  login_request.hpp  register_request.hpp  user_claims.hpp
include/dorm_energy/domain/detection/: ianomaly_detector.hpp  istate_detector.hpp
include/dorm_energy/domain/logging/: ilogger.hpp
include/dorm_energy/domain/mqtt/: imqtt_connection.hpp  imqtt_message_dispatcher.hpp  imqtt_subscription.hpp
include/dorm_energy/domain/simulation/: idata_generator.hpp
include/dorm_energy/domain/storage/: anomaly_dto.hpp  anomaly_stats_dto.hpp  building_dto.hpp  device_dto.hpp  energy_by_room_dto.hpp  imeasurement_repository.hpp  power_point_dto.hpp  room_dto.hpp  severity_stats_dto.hpp  top_consumer_dto.hpp  user_dto.hpp
include/dorm_energy/logging/: logger.hpp
include/dorm_energy/mqtt/: message_parser.hpp  mqtt_client.hpp
include/dorm_energy/simulation/: generator.hpp
include/dorm_energy/storage/: repository.hpp
migrations/: 001_initial_schema.sql  002_anomalies_table.sql  003_buildings_table.sql  004_rooms_table.sql  005_devices_table.sql  006_notifications_table.sql  007_users_table.sql  008_organizations_table.sql  009_users_organization.sql  010_buildings_organization.sql  011_subscriptions_table.sql  012_sensor_readings_device_fk.sql  013_anomalies_device_fk.sql  014_anomalies_ack_user_fk.sql  015_device_tokens.sql  016_user_preferences.sql  017_organization_settings.sql  018_subscription_and_account_type.sql.sql  019_user_workspace_backfill.sql  020_seed_admin_workspace.sql  021_seed_building_analytics_variance.sql
ml/: evaluate_model.py  train_autoencoder.py
ml/models/: anomaly_autoencoder.onnx  anomaly_autoencoder.onnx.data  model.pth  scaler.json  threshold.txt
src/: main.cpp
src/app/: application.cpp  commands.cpp  message_handler.cpp  notifier.cpp  runtime.cpp
src/core/: measurement.cpp
src/detection/: anomaly_detector.cpp
src/dorm_energy/application/: application.cpp  application_builder.cpp  notifier_service.cpp  runtime.cpp
src/dorm_energy/core/: alert_severity.cpp  measurement.cpp
src/logging/: logger.cpp
src/mqtt/: message_parser.cpp  mqtt_client.cpp
src/simulation/: generator.cpp
src/storage/: repository.cpp
tests/integration/: postgres_repository_tests.cpp
tests/load/: rest-api.k6.js
tests/unit/: alert_severity_tests.cpp  auth_infrastructure_tests.cpp  auth_service_tests.cpp  detection_tests.cpp  measurement_tests.cpp  message_parser_tests.cpp  notifier_service_tests.cpp
(+72 files in other folders)
